<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/common_padding_right">
    <com.zhenghuiyan.todaything.widget.WeekButton
        android:id="@+id/week_sun"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/week_sunday"
        style="@style/WeekPickerButton"/>
    <com.zhenghuiyan.todaything.widget.WeekButton
        android:id="@+id/week_mon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/week_mondy"
        style="@style/WeekPickerButton"/>
    <com.zhenghuiyan.todaything.widget.WeekButton
        android:id="@+id/week_tue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/week_tuesday"
        style="@style/WeekPickerButton"/>
    <com.zhenghuiyan.todaything.widget.WeekButton
        android:id="@+id/week_wed"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/week_wednesday"
        style="@style/WeekPickerButton"/>
    <com.zhenghuiyan.todaything.widget.WeekButton
        android:id="@+id/week_thu"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/week_thursday"
        style="@style/WeekPickerButton"/>
    <com.zhenghuiyan.todaything.widget.WeekButton
        android:id="@+id/week_fri"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/week_friday"
        style="@style/WeekPickerButton"/>
    <com.zhenghuiyan.todaything.widget.WeekButton
        android:id="@+id/week_sat"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/week_saturday"
        style="@style/WeekPickerButton"/>

</LinearLayout>